--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
+
 
 *{
   margin: 0;
@@ -8,16 +9,18 @@
 }
 .main{
   width: 100%;
-  background-image: url('../app/OIP1.jpg');
+ background-color:rgb(43, 39, 39);
   background-position: center;
   background-size: cover;
   height: 109vh;
   
 }
 .navbar{
-  width: 1200px;
+  width: 1400px;
   height: 75px;
   margin: auto;
+  padding-left: 130px;
+  background-color: blueviolet;
 }
 .icon{
   width: 200px;
@@ -26,12 +29,13 @@
 
 }
 .logo{
-color: orangered;
-font-size: 40px;
+color: rgb(255, 174, 0);
+font-size: 28px;
 font-family:'Gill Sans';
-padding-left: 20px;
+padding-left: 1px;
 float: left;
 padding-top: 20px;
+font-weight: bolder;
 
 }
 
@@ -46,6 +50,7 @@ ul{
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: 500px;
   
 }
 
@@ -66,53 +71,20 @@ ul li a{
 }
 
 ul li a:hover{
-  color: orangered;
+  color: lightblue;
 }
-.search{
-  width: 330px;
-  float: left;
-  margin-left: 270px;
+.personalimage{
+  height: 300px;
+  background: no-repeat;
+  background-position: center;
+  border-radius: 300%;
+  
 
-}
-
-.srch{
-  font-family: 'Times New Roman';
-  width: 200px;
-  height: 40px;
-  background: transparent;
-  border: 1px solid orangered;
-  margin-top: 13px;
-  color: white;
-  border-right:none;
-  font-size: 16px;
-  float: left;
-  padding: 10PX;
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
-}
-
-.btn{
-  width: 100px;
-  height: 40px;
-  background: orangered;
-  border: 2px solid orangered;
-  margin-top: 13px;
-  color: white;
-  font-size: 16px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-
-}
-.btn:focus{
-  outline: none;
-}
-
-.srch:focus{
-  outline: none;
-}
-
+  background-image: url("Farzan.jpg.jpeg");
+  
+}  
 .content{
-color:orange;
+color:white;
 justify-content: center;
 align-items: center;
 text-align: center;
@@ -120,88 +92,26 @@ margin-left: 300px;
 margin-top: 200px;
 height: 60px;
 width: 1000px;
-animation:xpert 0.6s 1s infinite ;
 }
-@keyframes xpert{
-  from{
-    color:rgb(0, 0, 0);
-    font-size: large;
-  }
-  to{
-    color:orange;
-    font-size: small;
-  }
+.content h1{
+  font-size: 100px;
+  padding-top: 0.02px;
+  font-family: 'Trebuchet MS';
 }
-
-h1{
-  font-size: 50px;
+.content h2{
+  font-size: 25px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding-top: 0.02px;
 }
 
-.ContactUsmain{
-  color: red;
-  height: 400px;
-  width: 600px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin-top: 150px;
-  margin-left: 430px;
-  margin-right: 400px;
-  font-size: x-large;
-  border-radius: 20%;
+.contenthome h1{
+  font-size: 100px;
+  padding-top: 0.02px;
+  font-family:'Lucida Sans';
 }
-.ContactUsmain:hover{
-  background-color: black;
-  height: 400px;
-  width: 600px;
-}
-.contactush1{
-  color: rgb(0, 255, 106);
-  font-family:'Calibri';
-  margin-bottom:30px ;
-  
-  animation:xpert 1.5s 1s 2 ;
-}
-@keyframes xpert{
-  from{
-    color:black;
-    
-  }
-  to{
-    color:orange;
-    
-  }
-}
-.Box{
-width:50%;
-font-size: x-large;
-border-radius: 20%;
-justify-content: center;
-text-align: center;
-font-family: 'Gill Sans';
 
-}
-.Details{
-
-line-height: 250%;
-}
-.contenthdr{
-  
-  animation:expert 1.5s 1s infinite ;
-  
-}
-@keyframes expert{
-  from{
-    color:black;
-    
-  }
-  to{
-    color:rgb(255, 0, 0)
-    
-  }
-}
 .contenthome{
-  color:rgb(255, 102, 0);
+  color:white;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -209,4 +119,37 @@ line-height: 250%;
   margin-top: 200px;
   height: 60px;
   width: 1000px;
+  
+}
+
+b{
+  float: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-left: 250px;
+
+  
+  
+}
+
+b li{
+  list-style: none;
+  margin-left: 200px;
+  margin-top: 400px;
+  font-size: 18px;
+
+}
+b li a{
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  font-family: Arial;
+  font-weight: bold;
+  transition: 0.4s ease-in-out;
+}
+
+b li a:hover{
+  color: rgb(123, 191, 214);
+  
 }
